--- a/css/products.css
+++ b/css/products.css
@@ -34,7 +34,9 @@
 h1.text-center {
   margin: 3rem 0;
 }
-
+.gal-item {
+  margin-bottom: 30px;
+}
 .gal-item a:after {
   content: "See more ";
   opacity: 0;
@@ -71,7 +73,7 @@ span.decorative-icon-left {
   top: 50%;
   left: 38%;
   margin-top: 0;
-  margin-left: -310px;
+  margin-left: -50%;
   vertical-align: 6px;
   transform: translate(100%, -50%);
   background: #6b2800;
@@ -96,7 +98,7 @@ span.decorative-icon-right {
   top: 50%;
   right: 38%;
   margin-top: 0;
-  margin-right: -40px;
+  margin-right: -17%;
   vertical-align: 6px;
   transform: translate(100%, -50%);
   background: #6b2800;
@@ -133,16 +135,17 @@ ul {
   margin-right: 10px;
   color: gray;
   font-size: 20px;
+  background-color: #FFFF;
 }
-#ceramicsubmenu li a{
+ul.collapse>li>a{
   margin-left: 20px;
   margin-right: 10px;
 }
-#ceramicsubmenu li a:hover {
+ul.collapse>li>a:hover {
   margin-left: 30px;
   margin-right: 0;
 }
-@media screen and (max-width: 415px) {
+@media screen and (max-width: 900px) {
   span.decorative-icon-right, span.decorative-icon-left {
     display: none;
   }
