--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,96 @@
 
 .banner{
   margin-bottom: 50px;
+  height: 100%;
+  position: relative;
 }
+
+.layer {
+  position: absolute;
+  text-align: center;
+  top : 15%;
+  text-transform: capitalize;
+  left: 30%;
+  height: auto;
+}
+.qoute {
+  font-size: 2.5rem;
+  margin-bottom:2rem;
+  animation-name: show;
+  animation-duration: 1s;
+  animation-delay: 2.4s;
+  animation-fill-mode: both;
+  opacity: 0;
+}
+.qoute::after , .qoute::before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 3px;
+  background: black;
+  margin: 10px;
+  opacity: 0;
+}
+.qoute::after {
+  animation-name: slideLeft;
+  animation-fill-mode: both;
+  animation-duration: 0.5s;
+  animation-delay: 3.9s;
+}
+.qoute::before {
+  animation-name: slideRight;
+  animation-fill-mode: both;
+  animation-duration: 0.5s;
+  animation-delay: 3.4s;
+}
+a.findMore {
+  padding: 15px 10px;
+  font-size: 1rem;
+  width: 200px;
+  margin: auto;
+  border-radius: 5px;
+  color: white!important;
+  background-color: #9d9d9d;
+  display: block;
+  cursor: pointer;
+  opacity: 0;
+  animation-name: slideUp;
+  animation-duration: 1.5s;
+  animation-delay: 4.4s;
+  animation-fill-mode: both;
+
+}
+.down {
+  font-size: 5rem;
+  margin-bottom:1rem;
+  animation-name: slideDown;
+  animation-duration: 2s;
+  animation-delay: 0.2s;
+  animation-fill-mode: both;
+  opacity: 0;
+}
+/* animation */
+@keyframes show {
+  from {opacity: 0}
+  to {opacity: 1}
+}
+@keyframes slideDown {
+  from {margin-top:-200px ;opacity: 0}
+  to {margin-top: 0;opacity:1}
+}
+@keyframes slideUp {
+  from {margin-top: 500px ; opacity: 0}
+  to {margin-top: 0; opacity: 1}
+}
+@keyframes slideRight {
+  from {margin-left: -500px;opacity: 0}
+  to {margin-left: 0;opacity: 1}
+}
+@keyframes slideLeft {
+  from {margin-left: 500px;opacity: 0}
+  to {margin-left: 0;opacity: 1}
+}
+/* end animation */
 .img-about{
   width:100%;
   height: auto;
