--- a/css/home.css
+++ b/css/home.css
@@ -189,7 +189,12 @@ span.decorative-icon-right {
     border: 1px solid #6b2800;
     transform: rotate(-45deg);
 }
-
+.card-body > h4 {
+  font-size: 1.1rem;
+}
+h1.text-center {
+  font-size: 2.5rem;
+}
 .item{
   padding: 5px;
 }
