--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,4 +1,7 @@
-
+.gal-item img {
+  height: 380px;
+  overflow: hidden;
+}
 .gallery-title
 {
     font-size: 36px;
@@ -75,6 +78,8 @@
   -webkit-transition: transform  0.7s linear;
   -moz-transition: transform 0.7s linear;
   border-radius: 10px;
+  height: 480px;
+  overflow: hidden;
 }
 .gallery_product:hover {
   transform: scale(0.92);
