--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,10 @@
-
+html {
+  background-color: #F2F1F0;
+}
 body {
   background-color: #F2F1F0 !important;
   font-family: 'Roboto Mono', monospace;
+  height: auto;
 }
 a {
   text-decoration: none !important;
@@ -68,7 +71,7 @@ a:hover {
 footer {
   height: 100px;
   box-sizing: border-box;
-  margin: 3rem 0;
+  margin: 4rem 0;
 }
 .foot {
   padding: 30px 0;
