--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -14,6 +14,9 @@
 .card{
   background-color: #FFFFFF !important;
 }
+.card-header{
+  background-color: rgba(0, 0, 0, .08);
+}
 h1 {
   padding: 1rem 0;
   font-size: 1.8rem;
