--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ nav.navbar{
    transition: all 0.4s ease;
 }
 nav.navbar.transparent {
-  background-color:rgba(0,0,0,0);
+  background-color: rgba(184, 183, 184, 0.5);
 }
 
 a:hover {
