--- a/css/home.css
+++ b/css/home.css
@@ -138,7 +138,7 @@ a.findMore {
   background-color: white;
   padding: 0px !important;
 }
-.content{
+.content-about{
   padding: 0px !important;
 }
 .aboutus .row .col-lg-8 .container{
@@ -240,7 +240,7 @@ span.decorative-icon-right {
     transform: rotate(-45deg);
 }
 .card-body > h4 {
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 h1.text-center {
   font-size: 2.5rem;
