--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,9 @@ a:hover {
 /* footer */
 footer {
   box-sizing: border-box;
-  margin: 4rem 0;
+  margin-top: 4rem;
+  border-top: 1px solid #dedede;
+  background: #fafafa;
 }
 .foot {
   padding: 30px 0;
@@ -87,8 +89,22 @@ footer {
   margin-bottom: 0;
 }
 .footer-column p{
-  font-size: 14px;
+  font-size: 1rem;
   margin-bottom: 0px;
+  color: #616161;
+}
+.CopyRight{
+  text-align: center;
+  font-size: 14px;
+}
+@media screen and (max-width: 750px){
+  .footer-column{
+    margin-bottom: 30px;
+  }
+  .CopyRight{
+    text-align: left;
+    padding: 0 15px;
+  }
 }
 /* responsive .
 put this code in the end*/
