--- a/css/cart.css
+++ b/css/cart.css
@@ -1,6 +1,7 @@
 body {
   font-family: "Lato", sans-serif;
 }
+
 .cart-icon {
   font-size: 2.5rem;
   color: #333333;
@@ -36,15 +37,17 @@ body {
 }
 .cart-head {
   height: 10%;
-  padding: 10px;
+  padding: 2px;
   position: absolute;
   width: 100%;
-  top : 0;
+  top: 0;
+  padding-top: 20px;
 }
 .cart-body {
-  height: 85%;
+  background-color: white;
+  height: 80%;
   position: absolute;
-  top : 10%;
+  top: 12%;
   overflow-y: scroll;
   width: 100%;
 }
@@ -52,24 +55,38 @@ body {
   height: 5%;
   width: 100%;
   position: absolute;
-  top :95%;
+  top: 90%;
   font-size: 2rem;
-  padding-left: 30px;
+  padding-left: 10px;
+  padding-top: 15px;
 }
-.viewcart a , .viewcart h3 {
-  margin-left: 1rem;
+.viewcart a , .viewcart > .cart-head > h3 {
   display: inline-block;
   color: white!important;
 }
+
+.viewcart > .cart-head > h3 {
+  margin-left: 5rem;
+}
+
+.viewcart a {
+  margin-left: 3rem;
+}
+
 .viewcart .closebtn {
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.5rem;
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
 .viewcart a:hover {
   color: #f1f1f1;
+}
+
+.viewcart > .cart-body > h3 {
+  margin-top: 3rem;
+  margin-left: 1rem;
 }
 
 @media screen and (max-height: 450px) {
