--- a/css/home.css
+++ b/css/home.css
@@ -138,7 +138,7 @@ a.findMore {
   background-color: white;
   padding: 0px !important;
 }
-.content{
+.contentAbout{
   padding: 0px !important;
 }
 .aboutus .row .col-lg-8 .container{
