--- a/css/cart.css
+++ b/css/cart.css
@@ -36,6 +36,7 @@ body {
 }
 .list-group-item {
   padding: 6px!important;
+  max-height: 170px;
 }
 .list-group-item img, .blockInfo {
   padding: 4px!important;
