--- a/css/home.css
+++ b/css/home.css
@@ -112,15 +112,17 @@ a.findMore {
 .image-about{
   float: left;
   display: inline-block;
-  width: 35%;
+  width: 40%;
+  max-width: 380px;
 }
 .image-about img{
   width: 100%;
   height: auto;
+  max-height: 380px;
 }
 .details{
   float: right;
-   width:65%;
+   width:60%;
    padding: 35px 30px 15px;
 }
 .details .title{
@@ -146,6 +148,7 @@ a.findMore {
   margin: 0px;
 }
 .aboutus .row{
+  width: auto;
   margin: auto;
 }
 .button-about button{
@@ -164,7 +167,7 @@ a.findMore {
 .gallery-at-home img{
   width: 100%;
   height: auto;
-  max-width: 300px;
+  max-width: 380px;
   margin: auto;
 }
 .owl-theme .owl-nav {
