--- a/css/cart.css
+++ b/css/cart.css
@@ -40,7 +40,7 @@ body {
 }
 .list-group-item img {
   width : auto;
-  height :auto;
+  height :150px;
 }
 .list-group-item img, .blockInfo {
   padding: 4px!important;
