--- a/css/cart.css
+++ b/css/cart.css
@@ -85,8 +85,8 @@ body {
   width: 100%;
   position: absolute;
   top :90%;
-  font-size: 2rem;
-  padding-left: 30px;
+  font-size: 2.5rem;
+  padding: 15px 30px;
   background-color: #363636;
   color: white;
 }
