--- a/css/faq.css
+++ b/css/faq.css
@@ -1,15 +1,19 @@
-.page-heading h1{
+.page-heading {
 
   background-color: #f9f9f9;
 }
 .page-heading h1{
+  text-align: center;
   padding-top: 35px;
   padding-bottom: 35px;
-  text-align: left;
+
   margin-top: 0;
   margin-bottom: 0 !important;
   position: relative;
   border-top: 0 !important;
+}
+h1{
+  font-size: 50px;
 }
 
 .container{
@@ -17,4 +21,14 @@
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+.container h5{
+font-size: 17px;
+}
+.container p{
+  font-size: 16px;
+  padding-left: 7px;
+  text-indent: 30px;
+   font-family: "Times New Roman", Times, serif;
+
 }
