--- a/css/faq.css
+++ b/css/faq.css
@@ -1,19 +1,19 @@
 .page-heading {
 
-  background-color: #f9f9f9;
+  background-color: #ffffff;
 }
 .page-heading h1{
   text-align: center;
+
   padding-top: 35px;
   padding-bottom: 35px;
-
   margin-top: 0;
   margin-bottom: 0 !important;
   position: relative;
   border-top: 0 !important;
 }
 h1{
-  font-size: 50px;
+  font-size: 40px;
 }
 
 .container{
@@ -22,13 +22,19 @@ h1{
   padding-left: 15px;
   padding-right: 15px;
 }
-.container h5{
-font-size: 17px;
+ .container h5{
+  color: black;
+font-size: 20px;
 }
 .container p{
+  padding-bottom: 19px;
   font-size: 16px;
   padding-left: 7px;
   text-indent: 30px;
-   font-family: "Times New Roman", Times, serif;
 
+}
+.container h4{
+  padding: 10px;
+  font-size: 20px;
+  line-height: 8;
 }
