--- a/css/faq.css
+++ b/css/faq.css
@@ -1,13 +1,13 @@
-.page-heading h1{
+.page-heading{
 
   background-color: #f9f9f9;
 }
 .page-heading h1{
   padding-top: 35px;
   padding-bottom: 35px;
-  text-align: left;
+  text-align: center;
   margin-top: 0;
-  margin-bottom: 0 !important;
+  margin-bottom: 2rem;
   position: relative;
   border-top: 0 !important;
 }
@@ -17,4 +17,14 @@
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+.container h5{
+  font-weight: bold;
+}
+p{
+  font-size: 16px;
+}
+.faq p {
+  margin-left: 15px;
+  text-indent: 5px;
 }
