--- a/css/productdetail.css
+++ b/css/productdetail.css
@@ -71,12 +71,18 @@
 
 #more {
   list-style: circle important!;
+  font-size: 20px;
 }
 
-/* #more li
+#more ul {
+  margin-top: -50px;
+  margin-bottom: -10px;
+}
+
+#more li
 {
-    height: 5px;
-} */
+  margin: auto;
+}
 
 @media(max-width: 768px) {
   .header .row:first-child {
